# posture-guard

./: .gitignore  LICENSE  Makefile  PostureGuard.spec  README.md  posture_guard.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
posture_guard/: __init__.py  __main__.py  app.py  calibration.py  config.py  detector.py  main.py  notifier.py  tray.py  utils.py
posture_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
