[project]
name = "posture-guard"
version = "0.2.0"
description = "Real-time posture monitoring that runs in the background"
readme = "README.md"
license = { file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[project.scripts]
posture-guard = "posture_guard.main:main"

[project.optional-dependencies]
windows = ["win10toast"]
dev = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["posture_guard"]
